--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<!DOCTYPE HTML>
 <html>
-<head>
-<title>Muthu Creation</title>
-</head>
-<body>
-Something awesome is under construction
-</body>
+	<head>
+	<title>Muthu Creation</title>
+
+	<style>
+	*{margin:0;padding: 0:}
+	</style>
+	<link href="style.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
+	</head>
+	<body>
+		<div class="coming">
+			<div class="logo">
+				<img src="images/logo.png" alt="logo">
+				<h3>Coming Soon.....</h3>
+			</div>
+		</div>
+	</body>
 </html>
