--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<div class="logo">
 				<img src="images/logo.png" alt="logo">
 				<h3>Coming Soon.....</h3>
+				<a href="http://www.muthumani.portfoliobox.net" target="_blank">For temporary Site</a>
 			</div>
 		</div>
 	</body>
