--- a/index.html
+++ b/index.html
@@ -1,20 +1,208 @@
+<!DOCTYPE HTML>
 <html>
 	<head>
-	<title>Muthu Creation</title>
-
-	<style>
-	*{margin:0;padding: 0:}
-	</style>
-	<link href="style.css" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
+		<title>Mutumani | UI Designer</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<!-- MAIN STYLE SHEET-->
+		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/responsive.css">
+		<link rel="stylesheet" href="css/owl.theme.css">
+		<link rel="stylesheet" href="css/owl.carousel.css">
+		
+		<!-- GOOGLE FONTS-->	
+		<link href='https://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<div class="coming">
-			<div class="logo">
-				<img src="images/logo.png" alt="logo">
-				<h3>Coming Soon.....</h3>
-				<a href="http://www.muthumani.portfoliobox.net" target="_blank">For temporary Site</a>
+		<div class="overlay"></div>
+		<header class="header">
+		<h1 class="logo"><img src="img/logo.png" alt="M"></h1>
+		<button class="nav-btn	">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<nav class="menu">
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#who-i-am">Who i'm</a></li>
+				<li><a href="#what-i-do">What i do</a></li>
+				<li><a href="#my-works">My Works</a></li>
+				<li><a href="#get-in-touch">Get in touch</a></li>
+			</ul>
+		</nav>
+		</header>
+		<div class="main">
+		<section id="home" class="section-full bg-full home">
+			<div class="table">
+				<div class="table-cell">
+					<h1 class="my-name">Muthumani</h1>
+					<h2 class="my-profession">UI Designer</h2>
+					<a class="scroll-down" title="scroll down" href="#who-i-am"><img src="img/mouse.png"></a>
+				</div>
 			</div>
+		</section>
+		<section id="who-i-am" class="section-full who-i-am">
+			<h3 class="my-quote">I do what i love <br> and  <br> i love what i do</h3>
+			<section class="my-design-areas">
+				<div class="corporate-and-mobile">
+					<p class="corporate">Corporate</p>
+					<p class="mobile">Mobile</p>
+				</div>
+				<div class="web-and-visual">
+					<p class="web">Web</p>
+					<p class="visual">Visual</p>
+				</div>
+			</section>
+		</section>
+		<section id="what-i-do" class="section-full  what-i-do">
+			<div id="area-of-expertise" class="owl-carousel owl-theme">				 
+				  <div class="item"><h3>Analysis</h3><img class="m-top-bot-40"src="img/analysis.png" alt=""></div>
+				  <div class="item"><h3>Wireframe</h3><img src="img/wireframe.png" alt=""></div>
+				  <div class="item"><h3>Design</h3><img src="img/design.png" alt=""></div>
+				  <div class="item"><h3>Launch</h3><img src="img/launch.png" alt=""></div>
+				  <div class="item"><h3></h3><img src="img/rocket.png" alt=""></div>
+			</div>
+		</section>
+		<section id="my-works" class="section-full my-works">
+			<div class="works-wrapper">
+				<div class="work open-popup" id="work-1">
+					<img src="img/work-1.png">
+					<h3 class="my-work-name">Web</h3>
+					<div class="work-overlay">
+						<div class="table">
+							<div class="table-cell">
+								<span class="work-icon"></span>
+								<h3 class="work-name-overlay">Web</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work">
+					<img src="img/work-1.png">
+					<h3 class="my-work-name">Web</h3>
+					<div class="work-overlay">
+						<div class="table">
+							<div class="table-cell">
+								<span class="work-icon"></span>
+								<h3 class="work-name-overlay">Web</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work">
+					<img src="img/work-1.png">
+					<h3 class="my-work-name">Web</h3>
+					<div class="work-overlay">
+						<div class="table">
+							<div class="table-cell">
+								<span class="work-icon"></span>
+								<h3 class="work-name-overlay">Web</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work">
+					<img src="img/work-1.png">
+					<h3 class="my-work-name">Web</h3>
+					<div class="work-overlay">
+						<div class="table">
+							<div class="table-cell">
+								<span class="work-icon"></span>
+								<h3 class="work-name-overlay">Web</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work">
+					<img src="img/work-1.png">
+					<h3 class="my-work-name">Web</h3>
+					<div class="work-overlay">
+						<div class="table">
+							<div class="table-cell">
+								<span class="work-icon"></span>
+								<h3 class="work-name-overlay">Web</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work">
+					<img src="img/work-1.png">
+					<h3 class="my-work-name">Web</h3>
+					<div class="work-overlay">
+						<div class="table">
+							<div class="table-cell">
+								<span class="work-icon"></span>
+								<h3 class="work-name-overlay">Web</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work">
+					<img src="img/work-1.png">
+					<h3 class="my-work-name">Web</h3>
+					<div class="work-overlay">
+						<div class="table">
+							<div class="table-cell">
+							<span class="work-icon"></span>
+								<h3 class="work-name-overlay">Web</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work">
+					<img src="img/work-1.png">
+					<h3 class="my-work-name">Web</h3>
+					<div class="work-overlay">
+						<div class="table">
+							<div class="table-cell">
+								<span class="work-icon"><img src="img/mouse.png"></span>
+								<h3 class="work-name-overlay">Web</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- my works popups -->
+			<div id="work-1-modal" class="modal-wrapper">
+				<div class="modal">
+					<a class="close-modal">X</a>	
+					<div class="work-screen">
+						<h3 class="work-detail">Flipkart.com - Layout Design - Illustrator</h3>
+						<img src="img/work1.png">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="get-in-touch" class="get-in-touch section-full">
+			<div class="my-home-map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7772.644242146137!2d80.18594!3d13.07876!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5261556055393f%3A0xbc05421165d7f72e!2s6%2F234%2C+Barner+Rd%2C+Block+6%2C+Mogappair+East%2C+Chennai%2C+Tamil+Nadu+600050%2C+India!5e0!3m2!1sen!2sin!4v1455731987754" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="my-contacts">
+				<div class="contact address">
+					<span class="contact-icon"><img src="img/address.png"></span>
+					<h4 class="contact-title">Address</h4>
+					<address>Chennai, Tamilnadu</address>
+					<p></p>
+				</div>
+				<div class="contact phone">
+					<span class="contact-icon"><img src="img/phone.png"></span>
+					<h4 class="contact-title">Phone</h4>
+					<a href="tel:9876543210">9876543210</a>
+					<p></p>
+				</div>
+				<div class="contact email">
+					<span class="contact-icon"><img src="img/mail.png"></span>
+					<h4 class="contact-title">Email	</h4>
+					<a href="mailto:muthucreation@gmail.com">muthucre@gmail.com</a>
+					<p></p>
+				</div>
+			</div>
+		</section>
 		</div>
+		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="js/owl.carousel.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
+	
 	</body>
 </html>
