--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 				  <div class="item"><h3>Analysis</h3><img class="m-top-bot-40"src="img/analysis.png" alt=""></div>
 				  <div class="item"><h3>Wireframe</h3><img src="img/wireframe.png" alt=""></div>
 				  <div class="item"><h3>Design</h3><img src="img/design.png" alt=""></div>
+				  <div class="item"><h3>Testing	</h3><img src="img/testing.png" alt=""></div>
 				  <div class="item"><h3>Launch</h3><img src="img/launch.png" alt=""></div>
-				  <div class="item"><h3></h3><img src="img/rocket.png" alt=""></div>
 			</div>
 		</section>
 		<section id="my-works" class="section-full my-works">
@@ -72,8 +72,8 @@
 					<div class="work-overlay">
 						<div class="table">
 							<div class="table-cell">
-								<span class="work-icon"><img src="img/web.png"></span>
-								<h3 class="work-name-overlay">Web</h3>
+								<span class="work-icon"><img src="img/app.png"></span>
+								<h3 class="work-name-overlay">App</h3>
 							</div>
 						</div>
 					</div>
@@ -84,8 +84,8 @@
 					<div class="work-overlay">
 						<div class="table">
 							<div class="table-cell">
-								<span class="work-icon"><img src="img/web.png"></span>
-								<h3 class="work-name-overlay">Web</h3>
+								<span class="work-icon"><img src="img/app.png"></span>
+								<h3 class="work-name-overlay">App</h3>
 							</div>
 						</div>
 					</div>
@@ -144,8 +144,8 @@
 					<div class="work-overlay">
 						<div class="table">
 							<div class="table-cell">
-							<span class="work-icon"><img src="img/web.png"></span>
-								<h3 class="work-name-overlay">Web</h3>
+							<span class="work-icon"><img src="img/app.png"></span>
+								<h3 class="work-name-overlay">App</h3>
 							</div>
 						</div>
 					</div>
@@ -194,7 +194,7 @@
 				<div class="contact email">
 					<span class="contact-icon"><img src="img/mail.png"></span>
 					<h4 class="contact-title">Email	</h4>
-					<a href="mailto:muthucreation@gmail.com">muthucre@gmail.com</a>
+					<a href="mailto:muthucreation@gmail.com">pearlmani31@gmail.com</a>
 					<p></p>
 				</div>
 			</div>
