--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="stylesheet" href="css/owl.theme.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
+		<link rel="stylesheet" href="css/onepage-scroll.css">
 		
 		<!-- GOOGLE FONTS-->	
 		<link href='https://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
@@ -44,7 +45,7 @@
 		</section>
 		<section id="who-i-am" class="section-full who-i-am">
 			<h3 class="my-quote">I do what i love <br> and  <br> i love what i do</h3>
-			<section class="my-design-areas">
+			<div class="my-design-areas">
 				<div class="corporate-and-mobile">
 					<p class="corporate">Corporate</p>
 					<p class="mobile">Mobile</p>
@@ -53,7 +54,7 @@
 					<p class="web">Web</p>
 					<p class="visual">Visual</p>
 				</div>
-			</section>
+			</div>
 		</section>
 		<section id="what-i-do" class="section-full  what-i-do">
 			<div id="area-of-expertise" class="owl-carousel owl-theme">				 
@@ -202,6 +203,7 @@
 		</div>
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="js/owl.carousel.min.js"></script>
+		<script type="text/javascript" src="js/jquery.onepage-scroll.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	
 	</body>
