--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Mutumani | UI Designer</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- MAIN STYLE SHEET-->
 		<link rel="stylesheet" href="css/styles.css">
 		<link rel="stylesheet" href="css/responsive.css">
