--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mutumani | UI Designer</title>
+		<title>Mutumani | UX Designer</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- MAIN STYLE SHEET-->
@@ -16,17 +16,18 @@
 		<link href='https://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<div class="overlay"></div>
+		<div class="overlay">
 		<!-- my works popups -->
 			<div id="work-1-modal" class="modal-wrapper">
 				<div class="modal">
 					<a class="close-modal">X</a>	
 					<div class="work-screen">
 						<h3 class="work-detail">Reader App Design</h3>
-						<img src="img/work1.png">
+						<img src="img/work2.png">
 					</div>
 				</div>
 			</div>
+		</div>
 		
 		<header class="header">
 		<h1 class="logo"><img src="img/logo.png" alt="M"></h1>
@@ -49,8 +50,8 @@
 		<section id="home" class="section-full bg-full home">
 			<div class="table">
 				<div class="table-cell">
-					<h1 class="my-name">Muthumani</h1>
-					<h2 class="my-profession">UI Designer</h2>
+					<h1 class="my-name">Muthu Mani</h1>
+					<h2 class="my-profession">UX Designer</h2>
 					<a class="scroll-down" title="scroll down" href="#who-i-am"><img src="img/mouse.png"></a>
 				</div>
 			</div>
@@ -70,10 +71,10 @@
 		</section>
 		<section id="what-i-do" class="section-full  what-i-do">
 			<div id="area-of-expertise" class="owl-carousel owl-theme">				 
-				  <div class="item"><h3>Analysis</h3><img class="m-top-bot-40"src="img/analysis.png" alt=""></div>
+				  <div class="item"><h3>Research</h3><img class="m-top-bot-40"src="img/analysis.png" alt=""></div>
 				  <div class="item"><h3>Wireframe</h3><img src="img/wireframe.png" alt=""></div>
-				  <div class="item"><h3>Design</h3><img src="img/design.png" alt=""></div>
-				  <div class="item"><h3>Testing	</h3><img src="img/testing.png" alt=""></div>
+				  <div class="item"><h3>Visual Design</h3><img src="img/design.png" alt=""></div>
+				  <div class="item"><h3>Usability Testing</h3><img src="img/testing.png" alt=""></div>
 				  <div class="item"><h3>Launch</h3><img src="img/launch.png" alt=""></div>
 			</div>
 		</section>
